apps/golist-frontend/golist-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golist-frontend-ingress
  annotations:
    ingress.cilium.io/host-listener-port: "80"
spec:
  ingressClassName: cilium
  rules:
  - host: golist.7f000001.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: golist-frontend
            port:
              number: 8080
